--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,44 +1,73 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
+           
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" href="/" aria-current="page">Index
                         <span class="visually-hidden">(current)</span></a>
                 </li>
+                {%if user%}     
                 <li class="nav-item">
                     <a class="nav-link" href="/seguindo">Seguidos</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
-                    </div>
-                </li>
+                
             </ul>
-            <form class="d-flex my-2 my-lg-0">
+            <form class="d-flex m-2 my-lg-0">
                 <input class="form-control me-sm-2" type="text" placeholder="Search" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                     Search
                 </button>
             </form>
+            
+            <ul class="navbar-nav me-auto mt-2 mt-lg-0" style="width: 30vw; justify-content: right;">
+                <li class="nav-item dropdown" style="display: flex; justify-content: right; align-items: center;">
+                    <a class="nav-link dropdown-toggle" style="text-decoration: none;" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                    
+                            
+
+                            <img class="fir-author-image fir-clickcircle " src='{{myskin.img.url}}'  style='border-radius: 2em;' width='32px' height='32px' alt="Imagem do usuario">
+                              
+                            <label class="fig-author-figure-title">{{user}}</label>
+                                  
+                           
+                             
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="users/{{myskin.id}}">Meu Perfil</a>
+                        <a class="dropdown-item" href="/logout/">Desconectar</a>
+                    </div>
+                </li>
+            
+            </ul>
+            {%else%}
+        
+        <form class="d-flex m-2 my-lg-0">
+            <input class="form-control me-sm-2" type="text" placeholder="Search" />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                Search
+            </button>
+        </form>
+    </ul>
+            <a
+                href="/login"
+                class="btn btn-primary active"
+                role="button"
+                >
+                Faça seu Login
+                </a
+                >
+            
+            {%endif%}
+            
         </div>
 
     </div>
-    <div class='d-flex'
-        style=' flex-direction: column; justify-content: space-around;align-items: center;text-align: left; width: 10vw;'>
-        <p>
-            Não é você
-        </p>
-        <p>
-            <a href="/logout/"> clique aqui </a>
-        </p>
-
-    </div>
-    {%include 'usercardTemplate.html' with s=myskin%}
+    
+      
+     
 </nav>
