--- a/templates/postagem.html
+++ b/templates/postagem.html
@@ -17,13 +17,13 @@
             color:white
         }
    
-        body {
+        main {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
         }
-        .container {
+        .containerInner {
             width: 50%;
             margin: auto;
             overflow: hidden;
@@ -110,15 +110,15 @@
 <body>
 
 
+
+    
+
+{% include 'navbar.html' %}
 {{filme}}
 {{avaliacao}}
 {{generos}}
 {{plataformas}}
-    
-
-{% include 'navbar.html' %}
-
-    <main class="container py-2 d-flex justify-content-center" style="width: 80vw;">
+    <main class="containerInner py-2 d-flex justify-content-center" style="width: 80vw;">
         <div class="row text-white py-2 rounded-2" style="background-color: #161513; width: 100vw; justify-content: space-evenly; border-radius: 10px;">
           <div class="row mx-2 px-2">
             <div class="col justify-text " style="flex-grow: 1; background-color: #161513; height: 400px; border-top-left-radius: 10px; ">
