--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -9,160 +9,318 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
+    <style>
+      body {
+          background-color: #040404;
+          color: white;
+      }
+      .card {
+          background-color: #161513;
+          border: none;
+          margin-bottom: 1rem;
+      }
+      .btn-secondary {
+          background-color: #6c757d;
+          border-color: #6c757d;
+      }
+      .btn-secondary:hover {
+          background-color: #5a6268;
+          border-color: #5a6268;
+      }
+      .input-group-text, .form-control {
+          background-color: #161513;
+          color: white;
+          border: 1px solid #6c757d;
+      }
+      .dropdown-menu {
+          background-color: #161513;
+          color: white;
+      }
+      .dropdown-item {
+          color: white;
+      }
+      .dropdown-item:hover {
+          background-color: #5a6268;
+      }
+      .suggestions {
+          max-height: 200px;
+          overflow-y: auto;
+      }
+      .suggestion-item {
+          cursor: pointer;
+          padding: 5px;
+      }
+      .suggestion-item:hover {
+          background-color: #5a6268;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
-<p> <a href="/">HOME</a></p>
-    <h2>Playlist</h2>
-    <b>Nome: {{playuser.play.nome}}</b>
+    {% include 'navbar.html' %}
 
-    <p>Descrição: {{playuser.play.desc}}</p>
 
-    <b> Meus Filmes</b>
 
-    {%for p in playlist%}
-    <p id="{{p.id}}">
-      <span
-        onclick="httprequest({{p.filme.id}})"
-        style="cursor: pointer"
-        data-bs-toggle="modal"
-        data-bs-target="#getMovie"
-      >
-        {{p.filme}}
-      </span>
-
-      <a href="/removeFilmeFromPlaylist/{{p.id}}/" class="btn btn-danger"
-        >Remover</a
-      >
-
+    <!-- Frontend  -->
+    <div class="container mt-4">
       
-      {% if p.filme.nome in assistido%}
+      <h2>{{playuser.play.nome}}</h2>
 
-      <input type="checkbox" name="" id="" onclick="desassistido({{p.filme.id}})" checked >
-      {%else %}
-      <input type="checkbox" name="" id="" onclick="assistido({{p.filme.id}})" >
-      {%endif%}
-    </p>
-
-    {%endfor%}
-
-    <form action="/addFilmePlaylist/{{playuser.id}}/" method="post">
-      <fieldset>
-        <legend>Adicionar Filme a playlist</legend>
-        {% csrf_token %}
-        <div class="mb-3">
-          <select
-            class="form-select"
-            style="width: 50%"
-            name="filme"
-            id="filme"
-          >
-            {%for f in allMovies%}
-            <option value="{{f.id}}">{{f}}</option>
-
-            {%endfor%}
-          </select>
-        </div>
-
-        <input class="btn btn-primary" type="submit" value="Adicionar Genero" />
-      </fieldset>
-    </form>
-
-    {% include 'modal.html' with id='getMovie'%}
-    {% include 'modal.html' with id='addMovie'%}
-
-    <script>
-      async function httprequest(id) {
-        const url = `http://127.0.0.1:8000/getMovieInfo/${id}/`;
-
-        fetch(url, {
-          method: "GET",
-          headers: { "Content-type": "application/json;charset=UTF-8" },
-        })
-          .then((response) => response.json())
-          .then((response) => pegar(response, id))
-          .catch((error) => console.error('error: '+error));
-      }
-
-      function editaFilme() {
-        let ver = document.querySelector("#ver");
-        let filme = document.querySelector("#getFilme");
-        let duracao = document.querySelector("#getDuracao");
-        let vermais = document.querySelector("#verMais");
-        filme = filme.innerText;
-        duracao = duracao.innerText;
-        console.log(filme);
-        console.log(duracao);
-
-        html = `
-                    
-                    <label for="nome">nome</label><br>
-                        <input type="text" id="nome" name="nome" value="${filme}"><br>
-                        <label for="duracao">duracao</label><br>
-                        <input type="number" id="duracao" name="duracao" value="${duracao}"><br><br>
-                        <p id='verMais'> ${vermais.innerHTML} </p>
-                    `;
-        ver.innerHTML = html;
-      }
-      async function pegar(resposta, id) {
-        let mostrar = document.querySelector("#ver");
-        let edita = document.querySelector("#edita");
-        let remove = document.querySelector("#remove");
-        let form = document.querySelector("#form");
-        let link = document.querySelector("#linkbutton");
-        console.log(resposta);
-        const href = { remove: "removeFilme/", edita: "edita/" };
-        const url = `/getMovieInfoComplete/${id}`;
-        saida = `
-                         
-                            <b> filme </b> 
-                            <p id="getFilme">${resposta.filme}</p>
-                            <b> duração </b>
-                            <p id="getDuracao"> ${resposta.duracao} </p>
-                       
-                        
-                    `;
-        link.href=url
-        link.innerText="Ver mais"
-        mostrar.innerHTML = saida;
-      }
-    </script>
-    <script>
-
-    
-      async function assistido(id){
-          const url = `http://127.0.0.1:8000/filmeAssistido/${id}/`;
-  
-          fetch(url,  {
-          
-            method: "GET",
-            headers: { "Content-type": "application/json;charset=UTF-8" },
-          
-        })
-            .then((response) => response.json())
-            .then((response) => console.log(response))
-            .catch((error) => console.error('error: '+error));
-        }
-        
-       async function desassistido(id){
-          const url = `http://127.0.0.1:8000/filmeDesassistido/${id}/`;
-           fetch(url,  {
-          
-            method: "GET",
-            headers: { "Content-type": "application/json;charset=UTF-8" },
-          
-        })
-          .then((response) => response.json())
-          .then((response) => console.log(response))
-          .catch((error) => console.error('error: '+error));
-
-        }
+      <p><small>{{playuser.play.desc}}</small></p>
+      <p><b>Adicionar um título a esta lista</b></p>
+      <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">🔍</span>
+          <input type="text" class="form-control" placeholder="Pesquisar título para adicionar" aria-label="Pesquisar título para adicionar" aria-describedby="basic-addon1" id="searchInput">
+      </div>
+      <div id="suggestions" class="suggestions"></div>
       
+      <div class="d-flex justify-content-between align-items-center mb-2">
+          <span>{{playlist.count}} títulos</span>
+      </div> 
+   
+{% for p in playlist %}
 
-      
+      <div class="card">
+          <div class="row g-0">
+              <div class="col-md-2">
+                  <img src="{{p.filme.cover.url}}" class="img-fluid rounded-start" alt="Poster do Filme">
+              </div>
+              <div class="col-md-10">
+                  <div class="card-body">
+                      <h5 class="card-title">{{p.filme.nome}}</h5>
+                      <p class="card-text">⭐ {{p.filme.media_notas}} ({{p.filme.count_avaliacoes}}) | {{p.filme.duracao}} minutos</p>
+                      <a href="/postagem/{{p.filme.id}}" class="card-link">Avaliar</a>
+                      <p class="card-text mt-3"><small class="text-muted">Adicionado em {{p.created_at}}</small></p>
+                      <a href="/removeFilmeFromPlaylist/{{p.id}}" class="btn btn-danger">Remover</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  {%endfor%}
 
-    </script>
+</div>
+
     {%include 'bootstrapJS.html'%}
+    <script>
+      document.getElementById('searchInput').addEventListener('input', function() {
+        const query = this.value;
+        const playlistId = '{{playuser.play.id}}';  // Assuming this is passed to your template
+        console.log(playlistId)
+        if (query.length > 0) {  
+          fetch(`/search_movies/?query=${query}&playlist_id=${playlistId}`)
+            .then(response => response.json())
+            .then(data => {
+              const suggestionsDiv = document.getElementById('suggestions');
+              suggestionsDiv.innerHTML = '';
+              
+              data.forEach(movie => {
+                const div = document.createElement('div');
+                div.classList.add('suggestion-item');
+                div.textContent = movie.nome;
+                div.onclick = () => addToPlaylist(movie.id);
+                suggestionsDiv.appendChild(div);
+              });
+            })
+            .catch(error => console.error('Error fetching suggestions:', error));
+        }
+      });
+
+      function addToPlaylist(movieId) {
+        const playlistId = '{{playuser.id}}';
+        
+        fetch(`/addFilmePlaylist/${playlistId}/${movieId}/`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': '{{ csrf_token }}'
+          }
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            // Optionally, refresh the page or update the UI
+            window.location.reload();
+          } else {
+            console.error('Failed to add movie to playlist');
+          }
+        })
+        .catch(error => console.error('Error adding movie to playlist:', error));
+      }
+    </script>
   </body>
 </html>
+
+<!-- Teste  
+
+{%for p in playlist%}
+<p id="{{p.id}}">
+  <span
+    onclick="httprequest({{p.filme.id}})"
+    style="cursor: pointer"
+    data-bs-toggle="modal"
+    data-bs-target="#getMovie"
+  >
+    {{p.filme}}
+  </span>
+
+  <a href="/removeFilmeFromPlaylist/{{p.id}}/" class="btn btn-danger"
+    >Remover</a
+  >
+
+  
+  {% if p.filme.nome in assistido%}
+
+  <input type="checkbox" name="" id="" onclick="desassistido({{p.filme.id}})" checked >
+  {%else %}
+  <input type="checkbox" name="" id="" onclick="assistido({{p.filme.id}})" >
+  {%endif%}
+</p>
+
+{%endfor%}
+
+<form action="/addFilmePlaylist/{{playuser.id}}/" method="post">
+  <fieldset>
+    <legend>Adicionar Filme a playlist</legend>
+    {% csrf_token %}
+    <div class="mb-3">
+      <select
+        class="form-select"
+        style="width: 50%"
+        name="filme"
+        id="filme"
+      >
+        {%for f in allMovies%}
+        <option value="{{f.id}}">{{f}}</option>
+
+        {%endfor%}
+      </select>
+    </div>
+
+    <input class="btn btn-primary" type="submit" value="Adicionar Genero" />
+  </fieldset>
+</form>
+
+{% include 'modal.html' with id='getMovie'%}
+{% include 'modal.html' with id='addMovie'%}
+
+<script>
+  async function httprequest(id) {
+    const url = `http://127.0.0.1:8000/getMovieInfo/${id}/`;
+
+    fetch(url, {
+      method: "GET",
+      headers: { "Content-type": "application/json;charset=UTF-8" },
+    })
+      .then((response) => response.json())
+      .then((response) => pegar(response, id))
+      .catch((error) => console.error('error: '+error));
+  }
+
+  function editaFilme() {
+    let ver = document.querySelector("#ver");
+    let filme = document.querySelector("#getFilme");
+    let duracao = document.querySelector("#getDuracao");
+    let vermais = document.querySelector("#verMais");
+    filme = filme.innerText;
+    duracao = duracao.innerText;
+    console.log(filme);
+    console.log(duracao);
+
+    html = `
+                
+                <label for="nome">nome</label><br>
+                    <input type="text" id="nome" name="nome" value="${filme}"><br>
+                    <label for="duracao">duracao</label><br>
+                    <input type="number" id="duracao" name="duracao" value="${duracao}"><br><br>
+                    <p id='verMais'> ${vermais.innerHTML} </p>
+                `;
+    ver.innerHTML = html;
+  }
+  async function pegar(resposta, id) {
+    let mostrar = document.querySelector("#ver");
+    let edita = document.querySelector("#edita");
+    let remove = document.querySelector("#remove");
+    let form = document.querySelector("#form");
+    let link = document.querySelector("#linkbutton");
+    console.log(resposta);
+    const href = { remove: "removeFilme/", edita: "edita/" };
+    const url = `/getMovieInfoComplete/${id}`;
+    saida = `
+                     
+                        <b> filme </b> 
+                        <p id="getFilme">${resposta.filme}</p>
+                        <b> duração </b>
+                        <p id="getDuracao"> ${resposta.duracao} </p>
+                   
+                    
+                `;
+    link.href=url
+    link.innerText="Ver mais"
+    mostrar.innerHTML = saida;
+  }
+</script>
+<script>
+
+
+  async function assistido(id){
+      const url = `http://127.0.0.1:8000/filmeAssistido/${id}/`;
+
+      fetch(url,  {
+      
+        method: "GET",
+        headers: { "Content-type": "application/json;charset=UTF-8" },
+      
+    })
+        .then((response) => response.json())
+        .then((response) => console.log(response))
+        .catch((error) => console.error('error: '+error));
+    }
+    
+   async function desassistido(id){
+      const url = `http://127.0.0.1:8000/filmeDesassistido/${id}/`;
+       fetch(url,  {
+      
+        method: "GET",
+        headers: { "Content-type": "application/json;charset=UTF-8" },
+      
+    })
+      .then((response) => response.json())
+      .then((response) => console.log(response))
+      .catch((error) => console.error('error: '+error));
+
+    }
+  
+
+  
+
+</script>
+
+
+
+
+
+
+-->
+
+
+<!-- checkbox 
+
+
+ <div>
+              <input type="checkbox" id="selectAll"> Selecionar tudo
+              <button class="btn btn-secondary btn-sm ms-2">Copiar</button>
+              <button class="btn btn-secondary btn-sm ms-2">Mover</button>
+              <button class="btn btn-secondary btn-sm ms-2">Excluir</button>
+              <div class="dropdown d-inline ms-2">
+                  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Classificar por
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="#">Ordem da lista</a></li>
+                      <li><a class="dropdown-item" href="#">Título</a></li>
+                      <li><a class="dropdown-item" href="#">Data adicionada</a></li>
+                  </ul>
+              </div>
+          </div>
+
+-->
